# horeb-ai

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
app/: books.py  main.py  picker.py  reader.py  renderer.py  sidebar.py  styles.py  window.py  worker.py
eval/: metrics.py  run_eval.py
horeb/: __init__.py  bible_text.py  cli.py  engine.py  errors.py  llm.py  markdown.py  parallels.py  prompts.py  repair.py  schemas.py
tests/: README.md  conftest.py  test_bible_text.py  test_cli.py  test_engine.py  test_markdown.py  test_repair.py  test_schemas.py  test_segmentation.py  test_similarity_hybrid.py  test_snapshots.py  test_synthesis.py  test_tag_validation.py
tests/app/: conftest.py  test_books.py  test_renderer.py
tests/fixtures/responses/: john_3_16_valid.json  malformed_partial.json  out_of_range_citation.json  passage_john_3_16_out_of_range.json  wrong_question_distribution.json  wrong_summary_length.json
tests/fixtures/responses/book/: book_synthesis_partial_failure.json  book_synthesis_valid.json
tests/fixtures/responses/passage/: john_3_16_valid.json
tests/fixtures/responses/segment/: segment_valid.json
tests/fixtures/responses/similarity/: tag_hallucinated_ref.json  tag_invalid_terms.json  tag_valid.json
tests/integration/: test_live_api.py
